# protoCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RESULTS.md
.github/workflows/: ci.yml
benchmarks/: bench.sh
benchmarks/cpp/: attr_lookup.cpp  call_recursion.cpp  int_sum_loop.cpp  list_append_loop.cpp  multithread_cpu.cpp  str_concat_loop.cpp
benchmarks/proto/: attr_lookup.cpp  call_recursion.cpp  int_sum_loop.cpp  list_append_loop.cpp  multithread_cpu.cpp  str_concat_loop.cpp
benchmarks/proto_fast/: call_recursion.cpp  int_sum_loop.cpp  multithread_cpu.cpp
examples/: 01_hello.cpp  02_smallint_fast_path.cpp  03_atom_cas.cpp  04_structural_sharing.cpp  05_threads.cpp  06_actor_manual.cpp  README.md
